# nuwe-pyeccodes

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindEcCodes.cmake
data/: t.grb2
example/: CMakeLists.txt
example/message_handler/: CMakeLists.txt  example_config.h.in  main.cpp
src/: CMakeLists.txt
src/grib_message_handler/: CMakeLists.txt
src/grib_message_handler/src/: grib_file_handler.cpp  grib_file_handler.h  grib_handler.cpp  grib_handler.h  grib_message_handler.cpp  grib_message_handler.h
src/pyeccodes/: CMakeLists.txt  eccodes_function.cpp  eccodes_function.h  handler_class.cpp  handler_class.h  nuwe_pyeccodes.cpp  pyeccodes.cpp  setup.py.in
src/pyeccodes/nuwe_pyeccodes/: __init__.py
