#project(pyeccodes)

find_package(pybind11 REQUIRED)

pybind11_add_module(_pyeccodes 
	pyeccodes.cpp 
	eccodes_function.cpp
	handler_class.cpp
)

set(PYECCODES_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/nuwe_pyeccodes)

configure_file (
	"${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in"
    "${CMAKE_CURRENT_BINARY_DIR}/setup.py"
)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/nuwe_pyeccodes 
	DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

target_link_libraries(_pyeccodes PUBLIC
	NuwePyeccodes::grib_message_handler
)

set_target_properties(_pyeccodes PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PYECCODES_OUTPUT_DIRECTORY}
	RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PYECCODES_OUTPUT_DIRECTORY}
	RUNTIME_OUTPUT_DIRECTORY ${PYECCODES_OUTPUT_DIRECTORY}
	LIBRARY_OUTPUT_DIRECTORY_DEBUG ${PYECCODES_OUTPUT_DIRECTORY}
	LIBRARY_OUTPUT_DIRECTORY_RELEASE ${PYECCODES_OUTPUT_DIRECTORY}
	LIBRARY_OUTPUT_DIRECTORY ${PYECCODES_OUTPUT_DIRECTORY}
	ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${PYECCODES_OUTPUT_DIRECTORY}
	ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PYECCODES_OUTPUT_DIRECTORY}
	ARCHIVE_OUTPUT_DIRECTORY ${PYECCODES_OUTPUT_DIRECTORY}
)
